Magix/css/global.css
/* ... */
 .img {
 	border-radius: 5px 5px 0 0;
 	height: 65%;
 	width: fit-content;
 	max-width: 100px;
 	max-height: 100px;
 	height: 100px;
 	z-index: 0;
 }

 .imgCard {
 	border-radius: 5px 5px 0 0;
 	height: 55%;
 	width: 100%;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
 }

 /* On mouse-over, add a deeper shadow */
 .card:hover, #opponentIcon:hover {
 	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 	opacity: 0.5;
 }


 .container {
 	background-color: var(--lightBlue);
 	height: 45%;
 	width: 100%;
 	position: relative;
 	align-items: center;
 	justify-content: center;
 	border-radius: 5px 5px 0 0;
 	z-index: 0;
 }

 #card-container {
 	width: 100%;
 	height: 100%;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-evenly;
 	border-radius: 10px;
 	z-index: 0;
 	align-items: center;
 	margin: auto;
 }

 #opponentCards {
 	width: 70%;
 	height: 100%;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	justify-self: end;
 	padding: 10px;
 	padding-bottom: 20px;
 	border-radius: 10px;
 	padding-right: 20%;
 }

 #action-buttons, #info, #opponentInfo, #graphiques, .hp, .ConnexionBox ,#turn{
 	align-items: center;
 	justify-content: center;
 }

 #board {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	height: 100%;
 	width: 100%;
 	position: relative;
 }

 #boardCardContainer, #boardOpponentContainer {
 	height: 50%;
 	min-height: 200px;
 	width: 80%;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-evenly;
 	margin-left: 10%;

 }

 #boardOpponentContainer {
 	padding-top: 10px;
 }

 .sleep {
 	width: 60px;
 	height: 60px;
 	background-image: url("../img/sleeping.png");
 	background-size: contain;
 	background-repeat: no-repeat;
 	background-position: center;
 	position: absolute;
 	top: 0px;
 	right: 0px;

 }

 #action-buttons {
 	right: 0px;
 	width: 20%;
 	height: 100%;
 	border-radius: 10px;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
 }

 #messageErreurs, #messagesFin {
 	height: 100vh;
 	width: 100vw;
 	margin: auto;
 	color: var(--white);
 	align-items: center;
 	justify-content: center;
 	text-align: center;
 	padding-top: 600px;
 	z-index: 10;
 	margin-left: -20px;
 }

 #messagesFin {
 	background-color: rgba(var(--lightBlueStats), 0.6);
 	font-size: 200px;
 }

 #messageErreurs {
 	background-color: rgba(var(--orangeGame), 0.4);
 	font-size: 100px;
 }

 #opponent {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-evenly;
 	top: 0px;
 	height: 100%;
 	width: 100%;
 	padding-top: 5px;
 	border-radius: 10px;
 	position: relative;
 	background-color: rgba(var(--blueBoard), 0.5);
 }

 #info, #opponentInfo {
 	display: flex;
 	flex-direction: column;
 	width: 20%;
 	height: 100%;
 	color: var(--white);
 }

 #player {
 	display: flex;
 	flex-direction: row;
 	height: 100%;
 	width: 100%;
 	background-color: rgba(var(--blueBoard), 0.5);
 	justify-content: center;
 	align-items: center;
 }

 #gameInfo {
 	position: absolute;
 	left: 10px;
 	min-height: 100px;
 	min-width: 100px;
 	align-items: center;
 	justify-content: center;
 	width: 20%;
 	z-index: 10;

 }

 #buttons {
 	display: flex;
 	flex-direction: column;
 }

 #opponentIcon,
 #playerIcon {
 	justify-content: center;
 	align-items: center;
 }

 #turn {
 	color: var(--white);
 	width: 150px;
 	background-color: var(--lightBlue);
 }


 .isSelected {
 	background-color: var(--orange);
 }

 .hero.Selected {
 	background-color: var(--lightBlue);
 }


 #timerValue {
 	z-index: 1;
 	width: 70px;
 	height: 70px;
 	position: absolute;
 	left: 30px;
 	top: 30px;
 }

 #timerAnim {
 	width: 70px;
 	height: 70px;
 	position: relative;
 }

 /* stats/deck */
 #deck {
 	overflow: hidden;
 	background-image: url("../img/wallpaperbetter.com_1366x768.jpg");
 }

 #graphiques {
 	width: 90%;
 	height: 80%;
 	padding: 20px;
	padding-bottom: 50px;
 	margin: auto;
 	background-color: rgba(var(--pink), 0.4);
	text-align: center;
	font-size: large;
	overflow: hidden;
 }

 #graphiques #myChart {
 	height: 100%;
 	width: 100%;
 	max-height: 750px;
 	max-width: 1400px;
 	justify-self: center;
 	align-self: center;
 	margin: auto;
 }

 #myChart {
 	background-color: rgba(var(--pink), 0.6);
 	border-radius: 5px;
 }

 #deckAPI {
 	width: 100%;
 	height: 100%;
 	display: block;
 	background-color: rgba(var(--grayOpp), 0.8);
 }


 /* Lobby */
 h2 {
 	color: var(--orange);
 	font-size: 300%;

 }

 #lobby {
 	background-image: url("../img/Lobby.jpg");
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-template-rows: 1.5fr 1fr;
 	grid-template-areas:
 		'bouttons chat'
 		'heros heros'
 	;
 }

 #actionBar {
 	display: flex;
 	flex-direction: row;
 	width: 80%;
 	height: 10%;
 	justify-content: center;
 	align-items: center;
 	padding: 10px;
 	margin: auto;
 }

 #actionButtonsLobby {
 	grid-area: bouttons;
 	width: 100%;
 	height: 100%;
 	max-height: 500px;
 	margin: auto;
 }

 #buttonsLobby {
 	display: flex;
 	flex-direction: column;
 	width: fit-content;
 	align-items: center;
 	justify-content: center;
 	margin: auto;
 	background-color: rgba(var(--orangeGame), 0.2);
 }

 #buttonsLobby button,
 #buttonsLobby input {
 	margin: 10px;
 	min-height: 60px;
 	min-width: 250px;
 }

 #chat {
 	grid-area: chat;
 	width: 100%;
 	height: 500px;
 }

 #chat iframe {
 	min-height: 400px;
 }


 .heroSelectionGallery {
 	grid-area: heros;
 	display: flex;
 	flex-direction: column;
 	height: 300px;
 	width: 80%;
 	align-items: center;
 	justify-content: center;
 	background-color: rgba(var(--grayOpp), 0.6);
 	margin: 0px 10%;
 }

 #heroes {
 	/* grid-area: heroes; */
 	display: flex;
 	flex-direction: row;
 	width: 800%;

 	justify-content: center;
 }

 .tanks,
 .dps,
 .support {
 	display: flex;
 	flex-direction: column;
 	margin: 0px 10px;
 }

 .row1,
 .row2 {
 	display: flex;
 	flex-direction: row;
 	margin: 2px 0px;
 	justify-content: center;
 }
/* ... */

